# tetris-mcp

./: .gitignore  .mcp.json  Cargo.toml  README.md
.claude/specs/: requirements.md
engine/: Cargo.toml
engine-wasm/: Cargo.toml
engine-wasm/src/: lib.rs
engine/examples/: sample_game.rs
engine/src/: board.rs  game.rs  grid.rs  history.rs  lib.rs  piece.rs
games/: 0337da12-be01-42c9-a1e8-ebf5bd4dc270.json  245cbdcf-e076-4072-9d04-f86c337089bd.json  42201e56-0f01-43ce-b927-d23dfeec1afc.json  6004e39e-3d30-499c-a438-2ae3551bed0e.json  93f32d94-87a0-44cc-9a1d-5eeb425e3b32.json  974267f6-1445-44e5-af1f-c3fb7bb69c9c.json  a269c166-21e1-43fa-9b6e-dde09b317eb3.json  a4f89d7c-40b6-4d86-8f25-6db75b17fd00.json  aee4d5e5-4782-41cc-b15d-b328a3b072e8.json  d000e4ae-f2de-4b83-93b4-b5711aad1db6.json  e0c29c49-67f8-4246-94e3-234c8b57fecc.json  eff11e53-5f89-48e9-9bc4-1edc44da2f45.json  f37a8222-c344-4eef-b9cf-f7c4e8410ba4.json
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
viewer/: index.html
viewer/examples/: sample_game.json
