[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
engine = { path = "../engine" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }
