[package]
name = "tetris-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
